Обновлены настройки CORS для разрешения запросов с любых источников и добавлены новые параметры, включая поддержку всех HTTP методов и кеширование preflight запросов. Также обновлены правила безопасности для разрешения POST запросов к маршруту аутентификации и добавлен доступ к маршруту пользователей.